STEP1: Agregar nueva receta

--- a/recetas/Colombia/arroz_coco.html
+++ b/recetas/Colombia/arroz_coco.html
@@ -8,7 +8,7 @@
       <H1><IMG ID="imagen1" SRC="../../imagenes/arroz_coco.jpg" NAME="Imagen1" ALIGN=LEFT BORDER=0><BR CLEAR=LEFT><BR></H1>
       <H1 ID="titulo1">Arroz con coco</H1>
       <BR>
-      <P>El arroz con camarones es típico de la Costa Caribe y Costa Pacífica, aunque en las demás regiones ya se ha vuelto un plato muy apetecido para ocasiones especiales.</P>
+      <P>El arroz con camarones es tÃ­pico de la Costa Caribe y Costa Pacífica, aunque en las demás regiones ya se ha vuelto un plato muy apetecido para ocasiones especiales.</P>
       <BR>
       <P>Personas: 8<BR><BR>
       <B>Ingredientes:</B><BR>
